targets/srv0/k3s/linkwarden/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linkwarden-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
    - websecure-proxy
  routes:
    - match: Host(`links.$SERVICES_DOMAIN`)
      kind: Rule
      middlewares:
        - name: geoblock
          namespace: base
        - name: crowdsec-bouncer
          namespace: base
        - name: authelia-with-optional-header-gate
          namespace: base
      services:
        - name: linkwarden
          port: 3000
  tls:
    secretName: linkwarden-prod-tls
