targets/srv0/k3s/linkwarden/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-linkwarden-meilisearch-ingress
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: linkwarden-meilisearch
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: linkwarden
      ports:
        - port: 7700
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-linkwarden-postgresql-ingress
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: linkwarden-postgresql
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: linkwarden
      ports:
        - port: 5432
  policyTypes:
    - Ingress
